--- a/styles/architects.css
+++ b/styles/architects.css
@@ -6,3 +6,83 @@
     font-weight: 400;
     font-style: normal;
   }
+
+/*shared styles*/
+.display-flex{
+    display: flex;
+}
+.text-dark-2{
+    color: #424242;
+}
+.text-dark-1{
+
+}
+.text-dark-3 {
+    color: #727272;
+}
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+/*header styles*/
+
+/*navbar styles*/
+
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+
+.nav-link{
+    text-decoration: none;
+    font-weight: 500px;
+}
+
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.brand{
+    font-weight: 700;
+    font-size: 2.8rem;
+}
+
+/*banner styles*/
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+
+.primary-btn{
+    background-color: #FF900E;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+    border: none;
+    margin-bottom: 50px;
+}
+
+.banner-image{
+    width: 100%;
+}
+
+/*responsive media query*/
+
+@media screen and (max-width: 576px){
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
+}
