--- a/styles/architects.css
+++ b/styles/architects.css
@@ -169,10 +169,58 @@ main section{
 .companies img{
     filter: grayscale(100%);
 }
+
+/*features you will love*/
+
+#feature-section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+    
+}
+
+.feature-card{
+    padding: 30px;
+    box-shadow: 0px 4px 30px 0 rgba(0,0,0,0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+.feature-card .title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.features-you-love{
+    display: flex;
+    gap: 140px;
+}
+
+
+/*experience*/
+
+#badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -92px;
+}
+
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.featured-architect img{
+    width: 100%;
+}
+
 /*responsive media query*/
 
 @media screen and (max-width: 576px){
-    .navbar, .nav-links, .teams{
+    .navbar, .nav-links, .teams, .features-you-love{
         flex-direction: column;
     }
 
@@ -193,10 +241,15 @@ main section{
     .our-features{
         margin-left: 15px;
     }
+
+    #badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
 
 @media screen and (min-width: 577px) and (max-width: 992px){
-    .teams{
+    .teams, .features-you-love{
         flex-direction: column;
     }
     .our-features{
@@ -208,5 +261,8 @@ main section{
         gap: 50px;
     }
 
-    
+    #badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
